--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,6 @@
         function modeSwitched(i){
             console.log(modes[i]);
             socket.emit("modeSwitched", modes[i]);
-            document.getElementById("Status").innerHTML = 'Current mode: ' + modes[i] + " ";
         }
         var started = 1;
         var states = ["Stop", "Start"];
@@ -78,7 +77,7 @@
 
         // Message to the user
         socket.on('msg2user', function(message){
-            document.getElementById("Status").innerHTML = document.getElementById("Status").innerHTML.split("-")[0] + '-' + message;
+            document.getElementById("Status").innerHTML = message;
         });
 
     </script>
