--- a/public/index.html
+++ b/public/index.html
@@ -28,43 +28,49 @@
     </div>
     
     <div class="container">
-      <form>
-        <div class="form-row">
-          <div class="form-group col-md-12">
-            <label for="inputEmail4">Car Mode</label>
-            <button type="submit" class="btn btn-outline-primary" data-mode="training">Training</button>
-            <button type="submit" class="btn btn-outline-primary" data-mode="auto">Autopilot</button>
-            <button type="submit" class="btn btn-outline-primary" data-mode="dirauto">Direction auto</button>
-            <button type="submit" class="btn btn-outline-primary" data-mode="rest">Rest</button>
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="inputAddress">Model </label>
-          <select class="form-control" id="model_select">
-              <option selected>Choose model...</option>
-            </select>
-        </div>
-        <div class="form-group">
-          <label>Control </label>
-          <p><span id="control" class="oi oi-media-pause"></span></p>
-        </div>
-        <div class="form-group">
-          <label for="inputAddress2" id="maxSpeed">Max speed limit: 50%</label>
-          <input type="range" id="maxSpeedSlider" oninput="maxSpeedUdate();">
-        </div>
-        <button id="starter" class="btn btn-success btn-lg btn-block">Start</button>
-        <button id="starter" class="btn btn-info btn-lg btn-block">Take picture</button>
-      </form>
+	  <div class="row">
+	    <div class="col-md-8 mb-3">
+	      <form>
+	        <div class="form-row">
+	          <div class="form-group col-md-12">
+	            <label for="inputEmail4">Car Mode</label>
+	            <button type="submit" class="btn btn-outline-primary" data-mode="training">Training</button>
+	            <button type="submit" class="btn btn-outline-primary" data-mode="auto">Autopilot</button>
+	            <button type="submit" class="btn btn-outline-primary" data-mode="dirauto">Direction auto</button>
+	            <button type="submit" class="btn btn-outline-primary" data-mode="rest">Rest</button>
+	          </div>
+	        </div>
+	        <div class="form-group">
+	          <label for="inputAddress">Model </label>
+	          <select class="form-control" id="model_select">
+	              <option selected>Choose model...</option>
+	          </select>
+	        </div>
+	        <div class="form-group">
+	          <label>Control </label>
+	          <p><span id="control" class="oi oi-media-pause"></span></p>
+	        </div>
+	        <div class="form-group">
+	          <label for="inputAddress2" id="maxSpeed">Max speed limit: 50%</label>
+	          <input type="range" id="maxSpeedSlider" oninput="maxSpeedUdate();">
+	        </div>
+	        <button id="starter" class="btn btn-success btn-lg btn-block">Start</button>
+	      </form>
+	    </div>
+
+	    <div class="col-md-4 text-center mb-3">
+			<img src="img/img_stream.jpg" id="stream" class="rounded">
+			
+
+			<div class="btn-group mt-1" role="group" aria-label="Basic example">
+				<button id="camera" class="btn btn-info">Start camera</button>
+				<button type="button" class="btn btn-light">📸</button>
+			</div>
+
+	    </div>
+	  </div>
     </div>
     
-    <div class="container py-3" id="streaming">
-        <div class="row col-md-2 offset-md-5">
-	    <button id="camera" class="btn btn-info btn-lg">Start camera</button>
-        </div>
-        <div class="row">
-            <img src="" id="stream">
-        </div>
-    </div>
 
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
