--- a/public/index.html
+++ b/public/index.html
@@ -34,19 +34,19 @@
 	        <div class="form-row">
 	          <div class="form-group col-md-12">
 	            <label for="inputEmail4">Car Mode</label>
-	            <button type="submit" class="btn btn-outline-primary" data-mode="training">Training</button>
-	            <button type="submit" class="btn btn-outline-primary" data-mode="auto">Autopilot</button>
-	            <button type="submit" class="btn btn-outline-primary" data-mode="dirauto">Direction auto</button>
-	            <button type="submit" class="btn btn-outline-primary" data-mode="rest">Rest</button>
+	            <button type="submit" class="btn btn-outline-primary" data-mode="training">Training 🏋️</button>
+	            <button type="submit" class="btn btn-outline-primary" data-mode="auto">Autopilot 🧠</button>
+	            <button type="submit" class="btn btn-outline-primary" data-mode="dirauto">Direction auto 💡</button>
+	            <button type="submit" class="btn btn-outline-primary" data-mode="rest">Rest 💤</button>
 	          </div>
 	        </div>
-	        <div class="form-group">
+	        <div class="form-group" id="model-group">
 	          <label for="inputAddress">Model </label>
 	          <select class="form-control" id="model_select">
 	              <option selected>Choose model...</option>
 	          </select>
 	        </div>
-	        <div class="form-group">
+	        <div class="form-group" id="control-group">
 	          <label>Control </label>
 	          <p><span id="control" class="oi oi-media-pause"></span></p>
 	        </div>
@@ -65,7 +65,7 @@
 				    <marker id="arrow" markerWidth="10" markerHeight="10" refX="0" refY="3" orient="auto" markerUnits="strokeWidth">
 				      <path d="M0,0 L0,6 L3,3 z" fill="#f00" />
 				    </marker>
-				  </defs>
+				</defs>
 
 				<image id="stream_image" xlink:href="img/img_stream.jpg" x="0" y="0" height="150px" width="250px"/>
      			<line id="dirline" x1="125" y1="110" x2="25" y2="110" stroke="#f00" stroke-width="5" marker-end="url(#arrow)" />
