--- a/public/index.html
+++ b/public/index.html
@@ -33,11 +33,13 @@
 	      <form>
 	        <div class="form-row">
 	          <div class="form-group col-md-12">
-	            <label for="inputEmail4">Car Mode</label>
-	            <button type="submit" class="btn btn-outline-primary" data-mode="training">Training 🏋️</button>
-	            <button type="submit" class="btn btn-outline-primary" data-mode="auto">Autopilot 🧠</button>
-	            <button type="submit" class="btn btn-outline-primary" data-mode="dirauto">Direction auto 💡</button>
-	            <button type="submit" class="btn btn-outline-primary" data-mode="rest">Rest 💤</button>
+	            <label for="inputEmail4">Car Mode</label><br/>
+	            <div class="btn-group mr-2" role="group" aria-label="First group">
+		            <button type="submit" class="btn btn-outline-primary" data-mode="training">Training 🏋️</button>
+		            <button type="submit" class="btn btn-outline-primary" data-mode="auto">Autopilot 🧠</button>
+		            <button type="submit" class="btn btn-outline-primary" data-mode="dirauto">Direction auto 💡</button>
+		            <button type="submit" class="btn btn-outline-primary" data-mode="rest">Rest 💤</button>
+		        	</div>
 	          </div>
 	        </div>
 	        <div class="form-group" id="model-group">
@@ -51,10 +53,10 @@
 	          <p><span id="control" class="oi oi-media-pause"></span></p>
 	        </div>
 	        <div class="form-group">
-	          <label for="inputAddress2" id="maxSpeed">Max speed limit: 50%</label>
+	          <label for="inputAddress2" id="maxSpeed">Max speed limit: 50%</label><br/>
 	          <input type="range" id="maxSpeedSlider" oninput="maxSpeedUdate();">
 	        </div>
-	        <button id="starter" class="btn btn-success btn-lg btn-block">Start</button>
+	        <button id="starter" class="btn btn-success btn-lg btn-block" disabled>Start</button>
 	      </form>
 	    </div>
 
