change streaming default picture + hide arrow when not turning

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     
     <div class="container">
 	  <div class="row">
-	    <div class="col-md-8 mb-3">
+	    <div class="col-md-6 mb-3">
 	      <form>
 	        <div class="form-row">
 	          <div class="form-group col-md-12">
@@ -60,7 +60,7 @@
 	      </form>
 	    </div>
 
-	    <div class="col-md-4 text-center mb-3">
+	    <div class="col-md-6 text-center mb-3">
 
 			<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="stream" viewBox="0 0 250 150">
 				<defs>
@@ -70,7 +70,7 @@
 				</defs>
 
 				<image id="stream_image" xlink:href="img/img_stream.jpg" x="0" y="0" height="150px" width="250px"/>
-     			<line id="dirline" x1="125" y1="110" x2="25" y2="110" stroke="#f00" stroke-width="5" marker-end="url(#arrow)" />
+     			<line id="dirline" x1="125" y1="110" x2="25" y2="110" stroke="#f00" stroke-width="5" marker-end="url(#arrow)" visibility="hidden"/>
 			</svg>
 			</img>
 
