take picture front

--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
 
 			<div class="btn-group mt-1" role="group" aria-label="Basic example">
 				<button id="camera" class="btn btn-info">Start camera</button>
-				<button type="button" class="btn btn-light">📸</button>
+				<button id="take-picture" type="button" class="btn btn-light">📸</button>
 			</div>
 
 	    </div>
