--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     
     <div class="container">
 	  <div class="row">
-	    <div class="col-md-6 mb-3">
+	    <div class="col-lg-6 mb-3">
 	      <form>
 	        <div class="form-row">
 	          <div class="form-group col-md-12">
@@ -60,7 +60,7 @@
 	      </form>
 	    </div>
 
-	    <div class="col-md-6 text-center mb-3">
+	    <div class="col-lg-6 text-center mb-3">
 
 			<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="stream" viewBox="0 0 250 150">
 				<defs>
