--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,8 @@
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
       <h5 class="my-0 mr-md-auto font-weight-normal">IronCar Dashboard 🏎️</h5>
       <nav class="my-2 my-md-0 mr-md-3">
-        <a class="p-2 text-dark" href="#">Main</a>
+        <a class="p-2 text-dark" href="/">Main</a>
+        <a class="p-2 text-dark" href="/commands.html">Commands</a>
       </nav>
     </div>
 
