--- a/public/commands.html
+++ b/public/commands.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/open-iconic-bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+    <link href="css/nouislider.min.css" rel="stylesheet">
   </head>
 
   <body id="kinput">
@@ -28,20 +28,54 @@
       </div>
     </div>
     
-    <div class="container-fluid">
+    <div class="container">
 		<div class="row">
 	 		<div class="col-lg-4 mb-3">
 	 			<h5>Pins</h5>
 	 			<p>You use the <code>direction_pin</code> and <code>gas_pin</code> to set the pin number on the Pi Hat.</p>
-
+			</div>
+	 		<div class="col-lg-8 mb-3">
+	 			<div class="input-group mb-3">
+				  <div class="input-group-prepend">
+				    <span class="input-group-text">Direction Pin</span>
+				  </div>
+				  <input type="text" class="form-control" value="1">
+				</div>
+				<div class="input-group mb-3">
+				  <div class="input-group-prepend">
+				    <span class="input-group-text">Gas Pin</span>
+				  </div>
+				  <input type="text" class="form-control" value="2">
+				</div>
+	 		</div>
+		</div>
+		<div class="row">
+	 		<div class="col-lg-4 mb-3">
 	 			<h5>Steering</h5>
 	 			<p><code>left</code>, <code>straight</code> and <code>right</code> parameters are used to send the direction order. You need to tune those values so that the Raspi sends the right PWM commands to the RC Car.</p>
-
+	 		</div>
+	 		<div class="col-lg-8 mb-3">
+	 			<p>
+		 			<div id="slider-handles"></div>
+		 			Left : <span class="example-val" id="slider-value-left"></span><br>
+					Straight : <span class="example-val" id="slider-value-straight"></span><br>
+					Right : <span class="example-val" id="slider-value-right"></span><br>
+					</p>
+	 		</div>
+		</div>
+		<div class="row">
+	 		<div class="col-lg-4 mb-3">
 	 			<h5>Gas</h5>
 	 			<p><code>stop</code>, <code>neutral</code> and <code>drive</code></p>
 	 			<p><code>drive_max</code> is the maximum amount of gas.</p>
 	 			<p>The <code>rev_</code> parameters defines the same commands but for reverse.</p>
-
+			</div>
+	 		<div class="col-lg-8 mb-3">
+	 			TODO
+	 		</div>
+		</div>
+		<div class="row">
+	 		<div class="col-lg-4 mb-3">
 	 			<h5>t</h5>
 	 			<p><code>go_t</code>, <code>stop_t</code>, <code>left_t</code>, <code>right_t</code>, <code>invert_dir</code><p>
 	 		</div>
@@ -55,7 +89,33 @@
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/nouislider.min.js"></script>
     <script src="js/main.js"></script>
+    
+    <script>
+    // TODO put this in a separate file
+    // TODO change default names
+	var handlesSlider = document.getElementById('slider-handles');
+
+	noUiSlider.create(handlesSlider, {
+		start: [ 270, 400, 530],
+		connect: [false, true, true, false],
+		range: {
+			'min': [  100 ],
+			'max': [ 800 ]
+		}
+	});
+
+	var snapValues = [
+		document.getElementById('slider-value-left'),
+		document.getElementById('slider-value-straight'),
+		document.getElementById('slider-value-right')
+	];
+
+	handlesSlider.noUiSlider.on('update', function( values, handle ) {
+		snapValues[handle].innerHTML = Math.ceil(values[handle]);
+	});
+	</script>
 
   </body>
 </html>
